<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="monospace"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DADADA" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/btn_get_api_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getApiData"
            android:text="@string/btn_get_api_data"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/txt_slct_prov"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_prov"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="#ef9a9a"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/txt_slct_kab"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_kab"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="#ef9a9a"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/txt_slct_kec"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_kec"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="#ef9a9a"
            android:padding="8dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/txt_slct_kel"
            android:textAllCaps="true"
            android:textColor="#000000"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner_kel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="16dp"
            android:background="#ef9a9a"
            android:padding="8dp" />

        <TextView
            android:id="@+id/uniqueCode_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:padding="4dp"
            android:text=""
            android:textColor="#3d5afe"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>